fix button icons not showing on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,8 @@ body {
 .button-icon {
     height: 100%;
     padding: 5% 7% 5% 0%;
-    width: min-content;
+    width: max-content;
+
 }
 
 .cetec-icon {
